--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.thymeleaf.cache=false
-
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+security.jwt.token.secret-key=iodfg14dfjk234l2342isdkfkjk23duiodjf34xciosdkjldfjklsd9
+security.jwt.token.expire-length=3600000
