--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,22 +5,12 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true
-  sql:
-    init:
-      schema-locations: classpath*:schema.sql
-      mode: always
-  h2:
-    console:
-      enabled: true
   datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:mysql://localhost:3306/spring_shopping
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: user
+    password: password
+
 security:
   jwt:
     token:
