--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+security.jwt.token.secret-key=fjhbewhjbrfkelwdvhkewjkbwd
+security.jwt.token.expire-length=3600000
