--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/spring_shopping
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: user
-    password: password
+    username: ${impati}
+    password: ${impati}
 
 security:
   jwt:
