--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   sql:
     init:
       mode: always
-      data-locations: classpath:data.sql
+      data-locations: classpath:test-data.sql
 
 security:
   jwt:
