refator: app 모듈의 내용을 최상위 모듈로 이동한다

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,12 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    implementation project(':auth')
+    implementation project(':mart')
+    implementation project(':core')
+}
+
 allprojects {
 
     apply plugin: 'java'
