feat: JWT의 secretKey version 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 security.jwt.token.secret-key=iodfg14dfjk234l2342isdkfkjk23duiodjf34xciosdkjldfjklsd9
+security.jwt.token.secret-key.version=1
 security.jwt.token.expire-length=3600000
