refactor: domain 모듈의 이름을 app모듈로 변경하고, usecase, repository 인터페이스를 정의한다

--- a/mart/mart-repository/build.gradle
+++ b/mart/mart-repository/build.gradle
@@ -1,6 +1,5 @@
 dependencies {
-    implementation project(':mart:mart-domain')
-    implementation project(':mart:mart-service')
+    implementation project(':mart:mart-app')
 
     implementation project(':auth:auth-repository')
 }
