--- a/mart/mart-controller/build.gradle
+++ b/mart/mart-controller/build.gradle
@@ -1,8 +1,6 @@
 dependencies {
-    implementation project(':mart:mart-service')
-    implementation project(':mart:mart-domain')
-
-    implementation project(':auth:auth-service')
+    implementation project(':mart:mart-app')
 
     implementation project(':core')
+    implementation project(':auth:auth-service')
 }
