--- a/mart/mart-service/build.gradle
+++ b/mart/mart-service/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    implementation project(':mart:mart-domain')
+    implementation project(':mart:mart-app')
 
     implementation project(':auth:auth-service')
 }
