--- a/settings.gradle
+++ b/settings.gradle
@@ -3,13 +3,13 @@ rootProject.name = 'spring-shopping'
 include 'core'
 
 include 'mart'
-include 'mart:mart-domain'
+include 'mart:mart-app'
 include 'mart:mart-service'
 include 'mart:mart-controller'
 include 'mart:mart-repository'
 
 include 'auth'
-include 'auth:auth-domain'
+include 'auth:auth-app'
 include 'auth:auth-service'
 include 'auth:auth-controller'
 include 'auth:auth-repository'
