feat: Order, Receipt 도메인을 정의한다

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,3 +13,6 @@ include 'auth:auth-app'
 include 'auth:auth-service'
 include 'auth:auth-controller'
 include 'auth:auth-repository'
+
+include 'order'
+include 'order:order-app'
