--- a/settings.gradle
+++ b/settings.gradle
@@ -17,5 +17,5 @@ include 'auth:auth-repository'
 include 'order'
 include 'order:order-app'
 include 'order:order-service'
-findProject(':order:order-service')?.name = 'order-service'
+include 'order:order-repository'
 
