--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ dependencies {
     implementation project(':mart:mart-controller')
     implementation project(':mart:mart-repository')
 
+    implementation project(':order:order-app')
+    implementation project(':order:order-service')
+    implementation project(':order:order-controller')
+    implementation project(':order:order-repository')
+
     implementation project(':core')
 }
 
