refactor: Order 기능이 userId를 기반으로 동작하도록 수정한다

--- a/order/order-controller/build.gradle
+++ b/order/order-controller/build.gradle
@@ -2,4 +2,6 @@ dependencies {
     implementation project(':order:order-app')
 
     implementation project(':auth:auth-service')
+
+    implementation project(':core')
 }
