--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
@@ -22,6 +21,9 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:4.4.0'
 
     runtimeOnly 'com.h2database:h2'
+
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    testImplementation 'org.mock-server:mockserver-junit-jupiter-no-dependencies:5.14.0'
 }
 
 tasks.named('test') {
