refactor: 인증 관련 의존성이 :auth:app 을 향하게 변경한다

--- a/mart/mart-controller/build.gradle
+++ b/mart/mart-controller/build.gradle
@@ -1,6 +1,5 @@
 dependencies {
-    implementation project(':mart:mart-app')
-
     implementation project(':core')
-    implementation project(':auth:auth-service')
+    implementation project(':mart:mart-app')
+    implementation project(':auth:auth-app')
 }
