--- a/order/order-controller/build.gradle
+++ b/order/order-controller/build.gradle
@@ -1,7 +1,5 @@
 dependencies {
-    implementation project(':order:order-app')
-
-    implementation project(':auth:auth-service')
-
     implementation project(':core')
+    implementation project(':auth:auth-app')
+    implementation project(':order:order-app')
 }
