--- a/settings.gradle
+++ b/settings.gradle
@@ -17,11 +17,8 @@ include 'auth:auth-repository'
 include 'order'
 include 'order:order-app'
 include 'order:order-service'
+include 'order:mock-exchange'
 include 'order:order-repository'
 include 'order:order-controller'
-findProject(':order:order-controller')?.name = 'order-controller'
-include 'order:currencylayer-vendor'
-findProject(':order:currencylayer-vendor')?.name = 'currencylayer-vendor'
 include 'order:currency-exchange'
-findProject(':order:currency-exchange')?.name = 'currency-exchange'
 
