--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     implementation project(':order:order-service')
     implementation project(':order:order-controller')
     implementation project(':order:order-repository')
+    implementation project(':order:mock-exchange')
+    implementation project(':order:currency-exchange')
 
     implementation project(':core')
 }
