--- a/settings.gradle
+++ b/settings.gradle
@@ -17,8 +17,7 @@ include 'auth:auth-repository'
 include 'order'
 include 'order:order-app'
 include 'order:order-service'
-include 'order:mock-exchange'
 include 'order:order-repository'
 include 'order:order-controller'
-include 'order:currency-exchange'
+include 'order:order-exchange'
 
