--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,2 +1,2 @@
-exchange.vendor.currency.url=http://api.currencylayer.com/live?currencies=KRW&access_key=
-exchange.vendor.currency.secret-key=caba68178b629d20461d71c4ed0a393a
+exchange.vendor.currency.url=
+exchange.vendor.currency.secret-key=
