--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,11 @@
 spring:
+  profiles:
+    active: local
+---
+spring:
+  config:
+    activate:
+      on-profile: local
   thymeleaf:
     cache: false
   jpa:
@@ -10,9 +17,46 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${USERNAME}
     password: ${PASSWORD}
-
 security:
   jwt:
     token:
       secret-key: ${SECRET_KEY}
       expire-time: ${EXPIRE}
+
+currency-api:
+  key: ${CURRENCY_ACCESS_KEY}
+  url: http://api.currencylayer.com/live
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: test
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true
+  sql:
+    init:
+      schema-locations: classpath*:schema.sql
+      mode: always
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+
+security:
+  jwt:
+    token:
+      secret-key: test
+      expire-time: 3600
+
+currency-api:
+  key: test
+  url: http://api.currencylayer.com/live
