feat: apiKey 를 주입받도록 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 shopping.token.secretKey="this_is_example_secret_key"
+shopping.currency.apiKey=b87f1d7c0299ae3f62ea4881b6893501
