refactor: module-app 이름을 module-domain 이름으로 변경한다

--- a/auth/auth-controller/build.gradle
+++ b/auth/auth-controller/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
     implementation project(':core')
 
-    implementation project(':auth:auth-app')
+    implementation project(':auth:auth-domain')
 }
