--- a/settings.gradle
+++ b/settings.gradle
@@ -3,19 +3,19 @@ rootProject.name = 'spring-shopping'
 include 'core'
 
 include 'mart'
-include 'mart:mart-app'
+include 'mart:mart-domain'
 include 'mart:mart-service'
 include 'mart:mart-controller'
 include 'mart:mart-repository'
 
 include 'auth'
-include 'auth:auth-app'
+include 'auth:auth-domain'
 include 'auth:auth-service'
 include 'auth:auth-controller'
 include 'auth:auth-repository'
 
 include 'order'
-include 'order:order-app'
+include 'order:order-domain'
 include 'order:order-service'
 include 'order:order-repository'
 include 'order:order-controller'
