--- a/build.gradle
+++ b/build.gradle
@@ -11,17 +11,17 @@ repositories {
 }
 
 dependencies {
-    implementation project(':auth:auth-app')
+    implementation project(':auth:auth-domain')
     implementation project(':auth:auth-service')
     implementation project(':auth:auth-controller')
     implementation project(':auth:auth-repository')
 
-    implementation project(':mart:mart-app')
+    implementation project(':mart:mart-domain')
     implementation project(':mart:mart-service')
     implementation project(':mart:mart-controller')
     implementation project(':mart:mart-repository')
 
-    implementation project(':order:order-app')
+    implementation project(':order:order-domain')
     implementation project(':order:order-service')
     implementation project(':order:order-controller')
     implementation project(':order:order-repository')
