--- a/mart/mart-controller/build.gradle
+++ b/mart/mart-controller/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
     implementation project(':core')
-    implementation project(':mart:mart-app')
-    implementation project(':auth:auth-app')
+    implementation project(':mart:mart-domain')
+    implementation project(':auth:auth-domain')
 }
