refactor: currency accessKey 환경 변수 추가

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,5 @@ out/
 .vscode/
 
 ### properties ###
-/src/application-jwt.properties
+/src/main/resources/application-jwt.properties
+/src/main/resources/application-currency.properties
