--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -7,11 +7,13 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
-    defer-datasource-initialization: true
+    defer-datasource-initialization:  true
   sql:
     init:
       mode: always
       data-locations: classpath:test-data.sql
+  profiles:
+    active: test
 
 security:
   jwt:
@@ -21,3 +23,4 @@ security:
 
 currency :
   accessKey: f65f292d4573186551719b6c582fa25e
+  baseUrl : "http://api.currencylayer.com"
