--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,23 +1,3 @@
 spring:
-  jpa:
-    hibernate:
-      ddl-auto: none
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true
-  sql:
-    init:
-      schema-locations: classpath*:schema.sql
-      mode: always
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-security:
-  jwt:
-    token:
-      secret-key: test
-      expire-time: 3600
+  profiles:
+    active: test
