--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 security.jwt.token.secret-key=fjhbewhjbrfkelwdvhkewjkbwd
 security.jwt.token.expire-length=3600000
 
-currency.api.key=291029e915128ec94e6587e9853d4b1f
+spring.config.import=config.properties
