--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,5 @@ out/
 .vscode/
 
 ### properties ###
-/src/main/resources/application-jwt.properties
-/src/main/resources/application-currency.properties
+**/application-jwt.properties
+**/application-currency.properties
