chore: 프로퍼티에 환율 관련 외부 API 를 추가한다

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # token secret key
 shopping.token.secretKey=token_secretKey
+
+# currency layer
+shopping.currency.url=http://api.currencylayer.com/live?access_key=
