--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-shopping.token.secretKey="this_is_example_secret_key"
-shopping.currency.apiKey=b87f1d7c0299ae3f62ea4881b6893501
+shopping.token.secretKey=${SECRET_KEY}
+shopping.currency.apiKey=${API_KEY}
