--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.rest-assured:rest-assured:4.4.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
+
 
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
