--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 security.jwt.token.secret-key=fjhbewhjbrfkelwdvhkewjkbwd
 security.jwt.token.expire-length=3600000
+
+currencylayer.apikey=key
+currencylayer.url=http://localhost:1913/api/live
