refactor: 외부 설정 파일 이름 더 명확하게 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 security.jwt.token.secret-key=fjhbewhjbrfkelwdvhkewjkbwd
 security.jwt.token.expire-length=3600000
 
-spring.config.import=config.properties
+spring.config.import=currency-api-config.properties
