--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.thymeleaf.cache=false
 
+spring.profiles.active=local
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -7,3 +9,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 security.jwt.token.secret-key=fjhbewhjbrfkelwdvhkewjkbwd
 security.jwt.token.expire-length=3600000
+
+spring.config.import=currency-api-config.properties
