refactor: API 키를 환경변수로 관리하도록 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.config.import=currencylayer-api.properties
 security.jwt.token.secret-key=iodfg14dfjk234l2342isdkfkjk23duiodjf34xciosdkjldfjklsd9
 security.jwt.token.expire-length=3600000
+currencylayer.access-key=${CURRENCYLAYER_ACCESS_KEY}
+currencylayer.base-url=${CURRENCYLAYER_BASE_URL}
