refactor: 외부 API 관련 리팩터링
- 예외 관련 처리 구체화
- 외부 API 설정 yml 파일로 이동

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -18,4 +18,8 @@ security:
       expire-time: 3600000
 
 api:
-  access-key: ${API_ACCESS_KEY}
+  url: "http://api.currencylayer.com/live"
+  quotes: quotes
+  source: USD
+  target: KRW
+  accessKey: ${API_ACCESS_KEY}
