Step 4 , 5 : 쇼핑 미션 (#22)
* docs: Step 4 요구사항 작성

* refactor: Login 정보를 LoginUtils 로 옮김

* feat: 주문 기능 구현

- Order 정의
- OrderItem 정의
- 토큰을 검증하는 Interceptor 에 /orders 경로 추가
- createOrder 기능 구현

* feat: 주문 기능 페이지 구현

* feat: 주문 상세 기능 구현

* feat: 주문 상세 기능 페이지 연동

* feat: 사용자 별 주문 목록 기능 구현

* feat: 사용자 별 주문 목록 기능 페이지 연동

* test: 사용자의 모든 주문 내역 조회 테스트 추가

* refactor: 컨밴션 리팩토링

* refactor: order 에서 Column 으로 주문 금액을 가지고 있는 것으로 변경

* docs: Step 5 요구사항 작성

* feat: spring.active.profiles 설정

* feat: 주문 시점의 실시간 환율 저장

* feat: 주문 관련 페이지에 적용 환율 , 변환 금액 반영

* refactor: 테스트 네이밍 추가 및 컨벤션 리팩토링

* feat: 테스트 환경에서 yml 파일을 분리

* feat: Order 와 OrderItem 값 객체 테스트 및 제약 조건 추가

- 가격 제약 조건 : 가격은 0원부터 10억까지 값을 가진다.
- 주문 총 가격 제약 조건 : 주문 총 가격은 0원부터 10억 * 1000 까지의 값을 가진다.

* fix: orderPrice 타입 int -> long , 소수점 출력 상수 관리

* refactor: 장바구니를 비우는 의미에서 deleteXXX -> emptyXXX 로 네이밍 변경

* test: 조회 응답 테스트 추가

* test: 외부서버와 통신하는 로직 테스트를 위한 mockWebServer 의존성 추가

* feat: 외부 API 를 이용한 로직 고도화하기

- RestTemplate -> WebClient 변경
- 외부 API 호출 실패시 재시도 기능 도입 ( 1초 간격 , 3번 호출 )
- 외부 API 호출 캐싱으로 매 주문 요청마다 호출 횟수 줄이기
- 외부 API 호출 mockWebServer 로 재시도 , 캐싱 테스트

* refactor: 스프링 웹 예외 처리 변경

* refactor: 컨벤션 리팩토링

* refactor: webClient 의 재시동 기능을 사용하는 것으로 변경

* refactor: infrastructure 패키지에 세부 구현만 두는 것으로 변경

* fix: 환율 정보를 가져오는 테스트에서 mockWebServer 를 사용

* refactor: Order 와 OrderItem 양방향 매핑을 단방향 매핑으로 변경

* refactor: exchangeRateService 의 메서드 네이밍을  getExchangeRate 으로 변경하고 캐시 시간 처리 리팩토링

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,11 @@
 spring:
+  profiles:
+    active: local
+---
+spring:
+  config:
+    activate:
+      on-profile: local
   thymeleaf:
     cache: false
   jpa:
@@ -10,9 +17,12 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${USERNAME}
     password: ${PASSWORD}
-
 security:
   jwt:
     token:
       secret-key: ${SECRET_KEY}
       expire-time: ${EXPIRE}
+
+currency-api:
+  key: ${CURRENCY_ACCESS_KEY}
+  url: http://api.currencylayer.com/live
