--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.rest-assured:rest-assured:4.4.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver'
 
     runtimeOnly 'com.h2database:h2'
 }
