refactor: 스프링부트테스트에 test 프로필 설정

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,4 +1,4 @@
 secret:
   currency:
     access_key: test-access-key
-    url: http://localhost:1080/live?currencies=KRW&access_key=
+    url: http://127.0.0.1
