--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,5 @@ out/
 .vscode/
 
 ### properties ###
-application-jwt.properties
+**/application-jwt.properties
+**/application-currency.properties
