--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.messages.basename=messages, errors
 spring.profiles.include=jwt,currencylayer
+cache.eviction.fixed-rate=60000
