--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:4.4.0'
 
     runtimeOnly 'com.h2database:h2'
+
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    testImplementation 'org.mock-server:mockserver-junit-jupiter-no-dependencies:5.14.0'
 }
 
 tasks.named('test') {
