Step4, 5 구현 완료하였습니다. (#23)
* refactor: ArgumentResolver를 config 패키지로 이동

* docs: 4단계 문서 작성

* feat: 주문 생성 통합테스트 및 기능 구현

* feat: 장바구니 목록 조회 통합 테스트 및 구현

* feat: 주문 세부사항 통합 테스트 및 예외 통합 테스트 작성, 구현

* feat: 주문 기능 View와 연동

* feat: 장바구니에 상품이 없는 경우 예외 반환 통합 테스트 및 구현

* refactor: CartItems를 Order로 변환하는 Mapper 객체 분리 및 객체 역할 분리

* refactor: Order가 product를 직접 참조하지 않고, 구매 시점의 상품 정보를 다시 가지고 있도록 변경

* refactor: 패키지 구조 변경 및 OrderItem에서 Wrapper Type 사용

* test: 환율 적용 통합 테스트 및 테스트 통과하도록 구현

* feat: 외부 API 호출 클래스 구현

* feat: 프론트 코드에 반영

* refactor: 외부 API 조회 property 파일 gitignore 처리

* refactor: 패키지 구조 변경

* refactor: ExchangeRateProvider가 Optional 반환

* refactor: API 호출 클래스 리팩토링

* refactor: API 호출 전에 validate 하여 validate 실패 시 API 호출 하지 않도록 함

* refactor: API 키를 환경변수로 관리하도록 설정

* refactor: test용 application.properties 생성

* feat: retry 로직 추가 및 MockWebServer를 이용한 테스트

* refactor: OrderItem의 Price와 Product의 Price를 분리

* refactor: 트랜잭션에서 외부 API를 호출하는 로직을 분리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 security.jwt.token.secret-key=iodfg14dfjk234l2342isdkfkjk23duiodjf34xciosdkjldfjklsd9
 security.jwt.token.expire-length=3600000
+currencylayer.access-key=${CURRENCYLAYER_ACCESS_KEY}
+currencylayer.base-url=${CURRENCYLAYER_BASE_URL}
