[Step4-5] 스프링 쇼핑몰 기능 구현 (#27)
* docs: 주문 기능 요구사항 정리

* feat: 주문 도메인 생성

* docs: 주문 조회 요구사항 보강

* test: 주문 인수 테스트 작성

* test: 주문 기능 테스트 작성

* move: main 패키지로 이동

* feat: Order 에 양방향 매핑 추가 및 OrderItem 에 Product 연관관계 추가

* test: 주문 테스트 케이스 보강

* feat: 주문 기능 구현

* refactor: orderItems 에 final 키워드 추가

* refactor: order 메서드를 하위 헬퍼 메서드로 분리

* refactor: id 타입을 Long 으로 변경

* refactor: 생성자 추가

* test: 주문 기능 단위 테스트 보강

* fix: Order 영속화를 위해 orderRepository 호출하도록 수정

* fix: service 계층에 @Login 어노테이션 제거

* feat: OrderRepository.save 구현

* feat: OrderService 에 트랜잭션 어노테이션 부착

* docs: 요구사항 정의 수정

* refactor: 요구 사항 변경에 따른 코드 수정

* refactor: 메소드 분리

* feat: 멤버의 모든 장바구니 상품을 지우는 메서드 구현

* test: 변경된 요구 사항에 따라 OrderServiceTest 수정

* refactor: 가독성을 위해 메서드 분리

* refactor: 접근 제어자 추가

* refactor: OrderResponse 생성자에서 OrderItemResponse 생성 책임을 지 않도록 수정

* test: 사용자 정보가 존재하지 않을 경우에 대한 단위 테스트 작성

* refactor: order 상세 정보 페이지의 url 수정 및 컨트롤러 빈 등록

* fix: 로그인 인터셉터에 /order 경로 등록

* feat: `order` 예약어로 인해 테이블 이름 수정 및 스키마 파일 갱신

* test: 장바구니 아이템 주문 후 장바구니가 초기화되는지에 대한 통합 테스트 작성

* feat: 주문하기 페이지 연동

* test: 주문할 상품이 존재하지 않는 테스트 케이스 추가

* feat: 주문할 상품이 존재하지 않는 경우 예외 처리

* test: CartRepository.save 단위 테스트 추가

* refactor: import 최적화

* fix: UnexpectedTransactionRollback 에러 발생으로 인해 repository @Transaction 제거

* test: 주문 상세 정보 조회 API 단위 테스트

* feat: OrderRepository.findById 구현

* feat: OrderService.getOrder 기능 구현

* feat: OrderController.orderDetailById API 구현

* refactor: ManyToOne 지연 로딩 설정

* refactor: 중복된 dto 생성 메서드를 dto 내부로 이동

* feat: 주문 금액의 총 합을 반환 값에 포함

* fix: 이름 unique 제약 조건 제거

* feat: 주문 상세 페이지 화면 연동

* feat: OrderRepository.findByMemberId 구현

* feat: OrderService.getOrders 구현

* fix: OneToMany 매핑에서 distinct 를 추가하여 중복된 결과 제거

* feat: OrderController.getOrders API 구현

* feat: 사용자 주문 기록 API 를 화면과 연동

* fix: 화면 오류 수정

* refactor: api 경로 prefix 를 /api 로 수정

* fix: 장바구니에 주문할 아이템이 없을 때 에러 처리

* docs: 완

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-shopping.token.secretKey="this_is_example_secret_key"
+shopping.token.secretKey=${SECRET_KEY}
+shopping.currency.apiKey=${API_KEY}
