--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,4 @@
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:test;MODE=MYSQL;DATABASE_TO_LOWER=TRUE
+
+currencylayer.access-key=40556d4742812da64d4d478639489d71
