refactor: data.sql 추가에 따라 테스트 코드 리팩토링

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:test;MODE=MYSQL;DATABASE_TO_LOWER=TRUE
+spring.jpa.defer-datasource-initialization=true
 
 currencylayer.access-key=40556d4742812da64d4d478639489d71
